update ApiResponse, package exception and Authen in package_service, bổ sung trường max, handle thêm 1 số token, ...